# Quantum-Neural-BP4-demo

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  NBP_demo.ipynb  NBP_jupyter  README.md  fileReader.cpp  fileReader.h  helpers.cpp  helpers.h  requirements.txt  simulateFER.cpp  stabilizerCodes.cpp  stabilizerCodes.h  train_toric_L8.py
.ipynb_checkpoints/: NBP_demo-checkpoint.ipynb
PCMs/GB_126_28/: GB_126_28_G.txt  GB_126_28_Gx.alist  GB_126_28_Gz.alist  GB_126_28_H_126.alist  GB_126_28_H_504.alist  GB_126_28_H_98.alist
PCMs/GB_254_28/: GB_254_28_G.txt  GB_254_28_Gx.alist  GB_254_28_Gz.alist  GB_254_28_H_226.alist  GB_254_28_H_254.alist  GB_254_28_H_2900.alist
PCMs/GB_46_2/: GB_46_2_G.txt  GB_46_2_Gx.alist  GB_46_2_Gz.alist  GB_46_2_H_44.alist  GB_46_2_H_46.alist  GB_46_2_H_800.alist
PCMs/GB_48_6/: GB_48_6_G.txt  GB_48_6_Gx.alist  GB_48_6_Gz.alist  GB_48_6_H.alist  GB_48_6_H_2000.alist  GB_48_6_H_48.alist
PCMs/toric_128_2/: toric_128_2_G.txt  toric_128_2_Gx.alist  toric_128_2_Gz.alist  toric_128_2_H_126.alist  toric_128_2_H_384.alist
PCMs/toric_200_2/: toric_200_2_G.txt  toric_200_2_Gx.alist  toric_200_2_Gz.alist  toric_200_2_H_198.alist  toric_200_2_H_600.alist
PCMs/toric_32_2/: LUTx_toric_4.txt  LUTz_toric_4.txt  toric_32_2_G.txt  toric_32_2_Gx.alist  toric_32_2_Gz.alist  toric_32_2_H_30.alist  toric_32_2_H_96.alist
PCMs/toric_72_2/: toric_72_2_G.txt  toric_72_2_Gx.alist  toric_72_2_Gz.alist  toric_72_2_H_216.alist  toric_72_2_H_70.alist
training_results/GB_46_2_800/: weight_cn.txt  weight_llr.txt  weight_vn.txt  weights_cn.pt  weights_llr.pt  (+1 more)
(+12 files in other folders)
